--- a/apps/snow-leopard/package.json
+++ b/apps/snow-leopard/package.json
@@ -34,6 +34,7 @@
     "@snow-leopard/db": "workspace:*",
     "@tavily/core": "^0.3.1",
     "@types/diff": "^7.0.1",
+    "@types/diff-match-patch": "^1.0.36",
     "@types/lodash.debounce": "^4.0.9",
     "@types/markdown-it": "^14.1.2",
     "@types/marked": "^6.0.0",
