--- a/apps/snow-leopard/package.json
+++ b/apps/snow-leopard/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.2.12",
-    "@ai-sdk/groq": "^1.1.13",
-    "@ai-sdk/react": "^1.1.20",
+    "@ai-sdk/anthropic": "1.2.12",
+    "@ai-sdk/groq": "1.1.13",
+    "@ai-sdk/react": "1.1.20",
     "@better-auth/stripe": "^1.2.7",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "1.1.2",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
