--- a/apps/saru/package.json
+++ b/apps/saru/package.json
@@ -12,6 +12,16 @@
     "@ai-sdk/groq": "1.1.13",
     "@ai-sdk/react": "1.1.20",
     "@better-auth/stripe": "^1.2.7",
+    "@milkdown/core": "^7.15.5",
+    "@milkdown/kit": "^7.15.5",
+    "@milkdown/plugin-clipboard": "^7.15.5",
+    "@milkdown/plugin-cursor": "^7.15.5",
+    "@milkdown/plugin-history": "^7.15.5",
+    "@milkdown/plugin-listener": "^7.15.5",
+    "@milkdown/plugin-prism": "^7.15.5",
+    "@milkdown/plugin-upload": "^7.15.5",
+    "@milkdown/preset-commonmark": "^7.15.5",
+    "@milkdown/theme-nord": "^7.15.5",
     "@radix-ui/react-alert-dialog": "1.1.2",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -58,7 +68,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.446.0",
     "markdown-it": "13.0.2",
-    "marked": "^15.0.11",
+    "marked": "^15.0.12",
     "nanoid": "^5.0.8",
     "next": "15.2.2-canary.1",
     "next-themes": "^0.3.0",
