--- a/apps/saru/package.json
+++ b/apps/saru/package.json
@@ -18,9 +18,11 @@
     "@milkdown/plugin-cursor": "^7.15.5",
     "@milkdown/plugin-history": "^7.15.5",
     "@milkdown/plugin-listener": "^7.15.5",
+    "@milkdown/plugin-math": "^7.5.9",
     "@milkdown/plugin-prism": "^7.15.5",
     "@milkdown/plugin-upload": "^7.15.5",
     "@milkdown/preset-commonmark": "^7.15.5",
+    "@milkdown/preset-gfm": "^7.15.5",
     "@milkdown/theme-nord": "^7.15.5",
     "@radix-ui/react-alert-dialog": "1.1.2",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -64,6 +66,7 @@
     "framer-motion": "^11.18.2",
     "geist": "^1.3.1",
     "install": "^0.13.0",
+    "katex": "^0.16.22",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.446.0",
