--- a/apps/saru/.env.example
+++ b/apps/saru/.env.example
@@ -3,6 +3,7 @@ GROQ_API_KEY=****
 
 DATABASE_URL="postgresql://user:password@localhost:5432/cursorforwriting_db"
 BETTER_AUTH_URL=http://localhost:3000
+NEXT_PUBLIC_BETTER_AUTH_URL=http://localhost:3000
 BETTER_AUTH_SECRET=123456789
 TAVILY_API_KEY=...
 
