chore: update to safe next/react versions

--- a/apps/saru/package.json
+++ b/apps/saru/package.json
@@ -60,7 +60,7 @@
     "markdown-it": "13.0.2",
     "marked": "^15.0.11",
     "nanoid": "^5.0.8",
-    "next": "15.2.2-canary.1",
+    "next": "15.3.6",
     "next-themes": "^0.3.0",
     "node-emoji": "^2.2.0",
     "npm": "^11.3.0",
@@ -83,10 +83,10 @@
     "prosemirror-state": "^1.4.3",
     "prosemirror-tables": "^1.7.1",
     "prosemirror-view": "^1.34.3",
-    "react": "19.0.0-rc-45804af1-20241021",
+    "react": "19.0.1",
     "react-color": "^2.19.3",
     "react-data-grid": "7.0.0-beta.47",
-    "react-dom": "19.0.0-rc-45804af1-20241021",
+    "react-dom": "19.0.1",
     "react-markdown": "^9.0.1",
     "react-mentions": "^4.4.10",
     "react-resizable-panels": "^2.1.7",
