--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-tailwindcss": "^3.17.5",
-    "next": "15.3.5",
+    "next": "15.3.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.1",
@@ -50,7 +50,8 @@
     "overrides": {
       "@ai-sdk/ui-utils": "^1.2.8",
       "@ai-sdk/provider": "^1.1.3",
-      "react": "19.0.0-rc-45804af1-20241021"
+      "react": "19.0.1",
+      "react-dom": "19.0.1"
     }
   }
 }
